--- a/010_VENTAS_WEB_Proyecto/CapaDatos/CapaDatos.csproj
+++ b/010_VENTAS_WEB_Proyecto/CapaDatos/CapaDatos.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="CD_Categoria.cs" />
     <Compile Include="CD_Compra.cs" />
+    <Compile Include="CD_Contable.cs" />
     <Compile Include="CD_Permisos.cs" />
     <Compile Include="CD_Producto.cs" />
     <Compile Include="CD_ProductoTienda.cs" />
